--- a/LoginAndRegister/src/loginandregister/DeleteUser.form
+++ b/LoginAndRegister/src/loginandregister/DeleteUser.form
@@ -127,6 +127,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Click here to go back"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel4MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
